--- a/css/show.less
+++ b/css/show.less
@@ -1,3 +1,6 @@
+@text-color: #0d1223;
+@text-muted: #918f90;
+
 * {
   box-sizing: border-box;
 }
@@ -11,6 +14,9 @@ html, body, #main {
   width: 100%;
   height: 100%;
   overflow: hidden;
+
+  color: @text-color;
+  line-height: 1.5rem;
 }
 
 #main {
@@ -34,7 +40,7 @@ html, body, #main {
   display: flex;
   flex: 1 1 auto;
 
-  &>.filter, &>.token-list {
+  &>.filter-list, &>.token-list {
     width: 50%;
     flex: 0 0 auto;
   }
@@ -67,5 +73,27 @@ html, body, #main {
   .frequency, .n-documents {
     width: 1px; // take the minimum amount of space
     text-align: right;
+  }
+}
+
+.filter-list {
+  padding: 1rem;
+
+  p {
+    margin: .5rem 0;
+  }
+
+  li {
+    padding: .5rem 0;
+
+    h4 {
+      margin: 0;
+    }
+
+    p {
+      color: @text-muted;
+      font-size: .9rem;
+      margin-top: 0;
+    }
   }
 }
