Search for a word when clicking on it

--- a/css/show.less
+++ b/css/show.less
@@ -65,6 +65,10 @@ html, body, #main {
     border-top: 1px solid #eee;
   }
 
+  td.name {
+    cursor: pointer;
+  }
+
   td, th {
     text-align: left;
     padding: .5rem 1rem;
