Make country names take just one line
[finishes #103417210]

--- a/css/show.less
+++ b/css/show.less
@@ -69,6 +69,7 @@ html, body, #main {
   table {
     width: 100%;
     border-collapse: collapse;
+    overflow: hidden;
   }
 
   table.too-wide {
@@ -139,6 +140,8 @@ html, body, #main {
     display: block;
     color: @text-muted;
     font-size: .8rem;
+    white-space: nowrap;
+    width: 1px;
   }
 }
 
