--- a/app/show.less
+++ b/app/show.less
@@ -118,12 +118,12 @@ html, body, #main {
       font-weight: bold;
       width: 1rem;
       color: @brand-danger;
-      visibility: hidden;
+      opacity: 0.00001; // non-zero, so integration test sees it
     }
   }
 
   tr:hover td.actions button {
-    visibility: visible;
+    opacity: 1;
   }
 
   .frequency, .n-documents {
